Fix vercel.json function path and add rewrites

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,6 +1,9 @@
 {
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.js" }
+  ],
   "functions": {
-    "api/**/*.js": {
+    "index.js": {
       "maxDuration": 30
     }
   }
